--- a/codegen/templates/api_mapping.json
+++ b/codegen/templates/api_mapping.json
@@ -1,6 +1,6 @@
 {
   "endpoint": {
-    "/proxycurl/api/linkedin/school": {
+    "/school": {
       "method": "GET",
       "title": "School Profile Endpoint",
       "docstring": "Cost: 1 credit / successful request.\nGet structured data of a LinkedIn School Profile",
@@ -18,7 +18,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company": {
+    "/company": {
       "method": "GET",
       "title": "Company Profile Endpoint",
       "docstring": "Cost: 1 credit / successful request.\nGet structured data of a Company Profile",
@@ -66,7 +66,7 @@
         }
       }
     },
-    "/proxycurl/api/v2/linkedin": {
+    "/profile": {
       "method": "GET",
       "title": "Person Profile Endpoint",
       "docstring": "Cost: 1 credit / successful request.\nGet structured data of a Personal Profile",
@@ -139,7 +139,7 @@
         }
       }
     },
-    "/proxycurl/api/customers": {
+    "/customers": {
       "method": "GET",
       "title": "Customer Listing Endpoint",
       "docstring": "Cost: 10 credits / result for users on an annual subscription or Enterprise plan.\nGet a list of probable corporate customers of a target company.",
@@ -162,7 +162,7 @@
         }
       }
     },
-    "/proxycurl/api/v2/search/company": {
+    "/search/company": {
       "method": "GET",
       "title": "Company Search Endpoint",
       "docstring": "Cost: 35 credits / successful request base charge.\nSearch for companies that meet a set of criteria within\n    our exhaustive dataset of company profiles.\n\n    This API endpoint is powered by [LinkDB](https://nubela.co/proxycurl/linkdb), our exhaustive dataset of company profiles.\n\n    This API endpoint can return at most of 10,000 results per search.",
@@ -275,7 +275,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company/employees": {
+    "/company/employees": {
       "method": "GET",
       "title": "Employee Listing Endpoint",
       "docstring": "Cost: 3 credits / employee returned.\nGet a list of employees of a Company.\n\nThis API endpoint is powered by [LinkDB](https://nubela.co/proxycurl/linkdb), our comprehensive dataset of people and company profiles.",
@@ -323,7 +323,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company/employees/count": {
+    "/company/employees/count": {
       "method": "GET",
       "title": "Employee Count Endpoint",
       "docstring": "Cost: 1 credit / successful request.\nGet a number of total employees of a Company.\n\nGet an employee count of this company from various sources.",
@@ -351,7 +351,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/person/profile-picture": {
+    "/person/profile-picture": {
       "method": "GET",
       "title": "Person Profile Picture Endpoint",
       "docstring": "Cost: 0 credit / successful request.\nGet the profile picture of a person.\n\nProfile pictures are served from cached people profiles found within [LinkDB](https://nubela.co/proxycurl/linkdb).\nIf the profile does not exist within [LinkDB](https://nubela.co/proxycurl/linkdb), then the API will return a `404` status code.",
@@ -364,7 +364,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company/profile-picture": {
+    "/company/profile-picture": {
       "method": "GET",
       "title": "Company Profile Picture Endpoint",
       "docstring": "Cost: 0 credit / successful request.\nGet the profile picture of a company.\n\nProfile pictures are served from cached company profiles found within [LinkDB](https://nubela.co/proxycurl/linkdb).\nIf the profile does not exist within [LinkDB](https://nubela.co/proxycurl/linkdb), then the API will return a `404` status code.",
@@ -377,7 +377,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/profile/resolve": {
+    "/profile/resolve": {
       "method": "GET",
       "title": "Person Lookup Endpoint",
       "docstring": "Cost: 2 credits / successful request.\nLook up a person with a name and company information.",
@@ -420,7 +420,7 @@
         }
       }
     },
-    "/proxycurl/api/v2/linkedin/company/job": {
+    "/company/job": {
       "method": "GET",
       "title": "Job Search Endpoint",
       "docstring": "Cost: 2 credits / successful request.\nList jobs posted by a company on LinkedIn",
@@ -463,7 +463,7 @@
         }
       }
     },
-    "/proxycurl/api/v2/linkedin/company/job/count": {
+    "/company/job/count": {
       "method": "GET",
       "title": "Jobs Listing Count Endpoint",
       "docstring": "Cost: 2 credits / successful request.\nCount number of jobs posted by a company on LinkedIn",
@@ -506,7 +506,7 @@
         }
       }
     },
-    "/proxycurl/api/find/company/role": {
+    "/find/company/role": {
       "method": "GET",
       "title": "Role Lookup Endpoint",
       "docstring": "Cost: 3 credits / successful request.\nReturns the profile of a person who most closely matches a specified role\nin a company. For instance, it can be used to identify the \"CTO\" of\n\"Apple\". The endpoint yields a single result that represents the closest\nmatch. For a detailed comparison between this API endpoint and the\n[Employee Search Endpoint](#company-api-employee-search-endpoint)\nor the [Person Search Endpoint](#search-api-person-search-endpoint),\nrefer to [this article](\n    https://nubela.co/blog/what-is-the-difference-between-the-person-search-endpoint-role-lookup-endpoint-and-the-employee-search-endpoint).",
@@ -529,7 +529,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company/resolve": {
+    "/company/resolve": {
       "method": "GET",
       "title": "Company Lookup Endpoint",
       "docstring": "Cost: 2 credits / successful request.\nResolve Company LinkedIn Profile from company name,\n    domain name and location.",
@@ -557,7 +557,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/company/employee/search": {
+    "/company/employee/search": {
       "method": "GET",
       "title": "Employee Search Endpoint",
       "docstring": "Cost: 10 credits / successful request.\nSearch employees of a target by their job title. This API endpoint is syntactic\nsugar for the role_search parameter under the [Employee Listing Endpoint](#company-api-employee-listing-endpoint).\nThis API endpoint is powered by [LinkDB](https://nubela.co/proxycurl/linkdb), our comprehensive dataset of people\nand company profiles. For a detailed comparison between this API endpoint\nand the [Role Lookup Endpoint](#people-api-role-lookup-endpoint) or the [Person Search Endpoint](#search-api-person-search-endpoint), refer to [this article](https://nubela.co/blog/what-is-the-difference-between-the-person-search-endpoint-role-lookup-endpoint-and-the-employee-search-endpoint).",
@@ -595,7 +595,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/school/students": {
+    "/school/students": {
       "method": "GET",
       "title": "Student Listing Endpoint",
       "docstring": "Cost: 3 credits / student returned.\nGet a list of students of a school or university.",
@@ -643,7 +643,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/profile/resolve/email": {
+    "/profile/resolve/email": {
       "method": "GET",
       "title": "Reverse Email Lookup Endpoint",
       "docstring": "Cost: 3 credits / successful request.\nResolve social media profiles correlated from an email address.\nThis API endpoint works with both personal and work emails.",
@@ -666,7 +666,7 @@
         }
       }
     },
-    "/proxycurl/api/resolve/phone": {
+    "/resolve/phone": {
       "method": "GET",
       "title": "Reverse Contact Number Lookup Endpoint",
       "docstring": "Cost: 3 credits / successful request.\nFind social media profiles from a contact phone number.",
@@ -679,7 +679,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/profile/email": {
+    "/profile/email": {
       "method": "GET",
       "title": "Work Email Lookup Endpoint",
       "docstring": "Cost: 3 credits / request.\nLookup work email address of a LinkedIn Person Profile.\n\nEmail addresses returned are verified to not be role-based or catch-all emails. Email addresses\nreturned by our API endpoint come with a 95+% deliverability guarantee\n\n**Endpoint behavior**\n\n*This endpoint* **_may not_** *return results immediately.*\n\nIf you provided a webhook in your request parameter, our application will call your webhook with\nthe result once. See `Webhook request` below.",
@@ -697,7 +697,7 @@
         }
       }
     },
-    "/proxycurl/api/v2/search/person": {
+    "/search/person": {
       "method": "GET",
       "title": "Person Search Endpoint",
       "docstring": "Cost: 35 credits / successful request base charge.\nSearch for people who meet a set of criteria within our exhaustive dataset of people profiles.\n\nThis API endpoint is powered by [LinkDB](https://nubela.co/proxycurl/linkdb), our exhaustive dataset of people and company profiles.\n\nThis API endpoint can return at most 10,000 results per search.",
@@ -935,7 +935,7 @@
         }
       }
     },
-    "/proxycurl/api/linkedin/job": {
+    "/job": {
       "method": "GET",
       "title": "Job Profile Endpoint",
       "docstring": "Cost: 2 credits / successful request.\nGet structured data of a LinkedIn Job Profile",
@@ -948,14 +948,14 @@
         }
       }
     },
-    "/proxycurl/api/credit-balance": {
+    "/credit-balance": {
       "method": "GET",
       "title": "View Credit Balance Endpoint",
       "docstring": "Cost: 0 credit / successful request.\nGet your current credit(s) balance",
       "result_class": "CreditBalance",
       "url_params": {}
     },
-    "/proxycurl/api/disposable-email": {
+    "/disposable-email": {
       "method": "GET",
       "title": "Disposable Email Address Check Endpoint",
       "docstring": "Cost: 0 credit / request.\nGiven an email address, checks if the email address belongs to a disposable email service.",
@@ -968,7 +968,7 @@
         }
       }
     },
-    "/proxycurl/api/contact-api/personal-contact": {
+    "/contact-api/personal-contact": {
       "method": "GET",
       "title": "Personal Contact Number Lookup Endpoint",
       "docstring": "Cost: 1 credit / contact number returned.\nFind personal phone numbers associated with a given social media profile.",
@@ -996,7 +996,7 @@
         }
       }
     },
-    "/proxycurl/api/contact-api/personal-email": {
+    "/contact-api/personal-email": {
       "method": "GET",
       "title": "Personal Email Lookup Endpoint",
       "docstring": "Cost: 1 credit / email returned.\nFind personal email addresses associated with a given social media profile.",
