--- a/codegen/templates/linkedin_mapping.json
+++ b/codegen/templates/linkedin_mapping.json
@@ -1,77 +1,77 @@
 {
-    "linkedin.person.get": {
-        "endpoint": "/proxycurl/api/v2/linkedin"
+    "person.get": {
+        "endpoint": "/profile"
     },
-    "linkedin.person.search": {
-        "endpoint": "/proxycurl/api/v2/search/person"
+    "person.search": {
+        "endpoint": "/search/person"
     },
-    "linkedin.person.resolve": {
-        "endpoint": "/proxycurl/api/linkedin/profile/resolve"
+    "person.resolve": {
+        "endpoint": "/profile/resolve"
     },
-    "linkedin.person.resolve_by_email": {
-        "endpoint": "/proxycurl/api/linkedin/profile/resolve/email"
+    "person.resolve_by_email": {
+        "endpoint": "/profile/resolve/email"
     },
-    "linkedin.person.resolve_by_phone": {
-        "endpoint": "/proxycurl/api/resolve/phone"
+    "person.resolve_by_phone": {
+        "endpoint": "/resolve/phone"
     },
-    "linkedin.person.lookup_email": {
-        "endpoint": "/proxycurl/api/linkedin/profile/email"
+    "person.lookup_email": {
+        "endpoint": "/profile/email"
     },
-    "linkedin.person.personal_contact": {
-        "endpoint": "/proxycurl/api/contact-api/personal-contact"
+    "person.personal_contact": {
+        "endpoint": "/contact-api/personal-contact"
     },
-    "linkedin.person.personal_email": {
-        "endpoint": "/proxycurl/api/contact-api/personal-email"
+    "person.personal_email": {
+        "endpoint": "/contact-api/personal-email"
     },
-    "linkedin.person.profile_picture": {
-        "endpoint": "/proxycurl/api/linkedin/person/profile-picture"
+    "person.profile_picture": {
+        "endpoint": "/person/profile-picture"
     },
-    "linkedin.company.get": {
-        "endpoint": "/proxycurl/api/linkedin/company"
+    "company.get": {
+        "endpoint": "/company"
     },
-    "linkedin.company.search": {
-        "endpoint": "/proxycurl/api/v2/search/company"
+    "company.search": {
+        "endpoint": "/search/company"
     },
-    "linkedin.company.resolve": {
-        "endpoint": "/proxycurl/api/linkedin/company/resolve"
+    "company.resolve": {
+        "endpoint": "/company/resolve"
     },
-    "linkedin.company.find_job": {
-        "endpoint": "/proxycurl/api/v2/linkedin/company/job"
+    "company.find_job": {
+        "endpoint": "/company/job"
     },
-    "linkedin.company.job_count": {
-        "endpoint": "/proxycurl/api/v2/linkedin/company/job/count"
+    "company.job_count": {
+        "endpoint": "/company/job/count"
     },
-    "linkedin.company.employee_count": {
-        "endpoint": "/proxycurl/api/linkedin/company/employees/count"
+    "company.employee_count": {
+        "endpoint": "/company/employees/count"
     },
-    "linkedin.company.employee_list": {
-        "endpoint": "/proxycurl/api/linkedin/company/employees"
+    "company.employee_list": {
+        "endpoint": "/company/employees"
     },
-    "linkedin.company.employee_search": {
-        "endpoint": "/proxycurl/api/linkedin/company/employee/search"
+    "company.employee_search": {
+        "endpoint": "/company/employee/search"
     },
-    "linkedin.company.role_lookup": {
-        "endpoint": "/proxycurl/api/find/company/role"
+    "company.role_lookup": {
+        "endpoint": "/find/company/role"
     },
-    "linkedin.company.profile_picture": {
-        "endpoint": "/proxycurl/api/linkedin/company/profile-picture"
+    "company.profile_picture": {
+        "endpoint": "/company/profile-picture"
     },
-    "linkedin.school.get": {
-        "endpoint": "/proxycurl/api/linkedin/school"
+    "school.get": {
+        "endpoint": "/school"
     },
-    "linkedin.school.student_list": {
-        "endpoint": "/proxycurl/api/linkedin/school/students"
+    "school.student_list": {
+        "endpoint": "/school/students"
     },
-    "linkedin.job.get": {
-        "endpoint": "/proxycurl/api/linkedin/job"
+    "job.get": {
+        "endpoint": "/job"
     },
-    "linkedin.disposable_email": {
-        "endpoint": "/proxycurl/api/disposable-email"
+    "disposable_email": {
+        "endpoint": "/disposable-email"
     },
-    "linkedin.customers.listing": {
-        "endpoint": "/proxycurl/api/customers"
+    "customers.listing": {
+        "endpoint": "/customers"
     },
     "get_balance": {
-        "endpoint": "/proxycurl/api/credit-balance"
+        "endpoint": "/credit-balance"
     }
 }
